--- a/My Job/Writing/extras/titelseite.tex
+++ b/My Job/Writing/extras/titelseite.tex
@@ -26,7 +26,7 @@
 
 %  \vspace*{2cm} % kein Bild: diese Zeile "einkommentieren" ...
   \vspace*{1cm} % ... und diese "auskommentieren ..."
-  {\huge {Understanding total water storage gain in Ob river basin using spaceborn observation}}\\[10mm]
+  {\huge {Understanding the positive trend in total water storage of Ob river basin using spaceborn observation}}\\[10mm]
   \vspace*{1cm} % ... und diese "auskommentieren" ...
 
 %  \vspace*{4cm} % kein Bild: diese Zeile "einkommentieren" ...
