--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -1,13 +1,18 @@
 @article{wahr1998time,
-  title={Time variability of the Earth's gravity field: Hydrological and oceanic effects and their possible detection using GRACE},
-  author={Wahr, John and Molenaar, Mery and Bryan, Frank},
-  journal={Journal of Geophysical Research: Solid Earth},
-  volume={103},
-  number={B12},
-  pages={30205--30229},
-  year={1998},
-  publisher={Wiley Online Library}
+	author = {Wahr, John and Molenaar, Mery and Bryan, Frank},
+	title = {Time variability of the Earth's gravity field: Hydrological and oceanic effects and their possible detection using GRACE},
+	journal = {Journal of Geophysical Research: Solid Earth},
+	volume = {103},
+	number = {B12},
+	pages = {30205-30229},
+	doi = {10.1029/98JB02844},
+	url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/98JB02844},
+	eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/98JB02844},
+	abstract = {The GRACE satellite mission, scheduled for launch in 2001, is designed to map out the Earth's gravity field to high accuracy every 2–4 weeks over a nominal lifetime of 5 years. Changes in the gravity field are caused by the redistribution of mass within the Earth and on or above its surface. GRACE will thus be able to constrain processes that involve mass redistribution. In this paper we use output from hydrological, oceanographic, and atmospheric models to estimate the variability in the gravity field (i.e., in the geoid) due to those sources. We develop a method for constructing surface mass estimates from the GRACE gravity coefficients. We show the results of simulations, where we use synthetic GRACE gravity data, constructed by combining estimated geophysical signals and simulated GRACE measurement errors, to attempt to recover hydrological and oceanographic signals. We show that GRACE may be able to recover changes in continental water storage and in seafloor pressure, at scales of a few hundred kilometers and larger and at timescales of a few weeks and longer, with accuracies approaching 2 mm in water thickness over land, and 0.1 mbar or better in seafloor pressure.},
+	year = {1998}
 }
+
+
 
 @book{revenga1998watersheds,
 	title={Watersheds of the World: Ecological Value and Vulnerability},
@@ -169,4 +174,15 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	author={Ghassemi, F and Jakeman, AJ and Nix, HA},
 	journal={CAB International, Wallingford, UK},
 	year={1995}
+}
+
+@article{rodell2018emerging,
+	title={Emerging trends in global freshwater availability},
+	author={Rodell, Matthew and Famiglietti, JS and Wiese, DN and Reager, JT and Beaudoing, HK and Landerer, Felix W and Lo, M-H},
+	journal={Nature},
+	volume={557},
+	number={7707},
+	pages={651--659},
+	year={2018},
+	publisher={Nature Publishing Group}
 }
